test/files/neg/t3987.check
t3987.scala:11: error: type mismatch;
 found   : Gox
 required: Test.GoxZed
<<<<<<< HEAD
=======
    (which expands to)  t#Zed forSome { type t <: Gox }
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
    val y: GoxZed = x
                    ^
one error found
